--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,10 +2,12 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    background:black;
+  font: 14px/28px D-DIN-Bold,Arial,Verdana,sans-serif;
     color:white;
+}
+
+html{
+  background:black;
 }
 
 a {
@@ -15,4 +17,73 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.page{
+  max-width: 1000px;
+  width: 100%;
+  margin: auto;
+}
+
+.page-header{
+  padding-top:10px;
+  font-weight: bold;
+}
+
+.bloc-mission{
+  display:inline-block;
+  margin:10px;
+  color:#ccc;
+
+ a{
+  width:100%;
+  height:100%;
+  padding:10px;
+ }
+
+ :hover{
+   color:white;
+ }
+}
+
+.page-footer{
+  bottom: 10px;
+  position: absolute;
+  display: block;
+  left: 50%;
+  width: 300px;
+  text-align: center;
+  margin-left: -150px;
+}
+
+.presentation{
+  display: flex;
+  text-align: center;
+  .mission{
+    width:30%;
+    margin:1%;
+    border: 3px solid #bbb;
+    border-radius: 10px;
+
+    &:hover{
+      background:white;
+      color:black;
+      transition: color 1s ease;
+      transition: background 1s ease;
+    }
+
+    a{
+      padding:20px;
+      display:block;
+
+
+    .titre{
+      font-size:20px;
+    }
+
+    .date{
+      font-size:10px;
+    }
+  }
+  }
 }
